# CLRS

./: .clang-tidy  .gitignore  CMakeLists.txt
latex/src/: CLRS-Chapter2-Problems.tex  CLRS-Chapter3-Exercises.tex  CLRS-chapter2Problems.tex
src/: horners_rule.cpp  insertion_sort.hpp  inversion_counter.hpp  main.cpp  utility.hpp
